# djangolancer

./: .env-dist  .gitignore  Dockerfile  README.md  db.sqlite3-  requirements.txt  sqliteConvertfromfile.py  testdata.json  testedata.json
backend/: --db.sqlite3  -db.sqlite3  .pylintrc  manage.py  pyproject.toml  tests.py
backend/chat/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/chat/filters/: room.py
backend/chat/fixtures/: skill.json  user.json
backend/chat/migrations/: 0001_initial.py  0002_remove_message_source_message_party_and_more.py  0004_message_message.py  0006_room_user.py  0007_alter_room_project.py  0008_message_is_seen_alter_message_media.py  0009_remove_message_is_seen.py  0010_message_is_seen.py
backend/chat/permissions/: message.py
backend/company/migrations/: 0001_initial.py
backend/complain/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/complain/fixtures/: level.json
backend/complain/migrations/: 0001_initial.py
backend/configuration/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/configuration/filters/: category.py
backend/configuration/fixtures/: auth.json  category.json
backend/configuration/migrations/: 0001_initial.py  0002_alter_category_parent.py  0003_auto_20221215_0854.py  0004_status_default.py  0005_alter_skill_name.py  0006_alter_category_options_alter_skill_options.py
backend/location/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/midlancer/: asgi.py  settings.py  urls.py  wsgi.py
backend/money/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/projects/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/user/: admin.py  apps.py  dashboard_serializers.py  dashboard_views.py  models.py  profile_models.py  profile_serializers.py  profile_views.py  urls.py  user_models.py  user_serializers.py  user_views.py
(+230 files in other folders)
