[project]
name = "djangolancer"
version = "0.0.1"
description = "Simple freelancer project."
readme = "README.md"
authors = [{name = "Mostafa Eftekharizadeh", email = "mostafa.eftekhari@gmail.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
urls = { homepage = "https://github.com/mostafaeftekharizadeh/" }

dependencies = [
	"asgiref==3.6.0",
	"backports.zoneinfo==0.2.1",
	"certifi==2022.12.7",
	"charset-normalizer==3.0.1",
	"coreapi==2.3.3",
	"coreschema==0.0.4",
	"Django==4.1.5",
	"django-cors-headers==3.13.0",
	"django-environ==0.9.0",
	"django-filter==22.1",
	"djangorestframework==3.14.0",
	"drf-yasg==1.21.4",
	"idna==3.4",
	"inflection==0.5.1",
	"ippanel==2.0.7",
	"itypes==1.2.0",
	"jdatetime==4.1.0",
	"Jinja2==3.1.2",
	"MarkupSafe==2.1.2",
	"packaging==23.0",
	"Pillow==9.4.0",
	"python-dateutil==2.8.2",
	"pytz==2022.7.1",
	"requests==2.28.2",
	"ruamel.yaml==0.17.21",
	"ruamel.yaml.clib==0.2.7",
	"six==1.16.0",
	"sqlparse==0.4.3",
	"uritemplate==4.1.1",
	"urllib3==1.26.14",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
    "black==23.7.0",
]

[build-system]
requires = ['setuptools>=68.1.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tools.black]
max-line-length = 88


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".nox",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "venv",
    'static',
    'migrations',
    '__pycache__',
    '.pytest_cache',
    '__init__.py',
]


# Assume Python 3.9.x
target-version = "py39"


